# web-gallery_desktop-gallery

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build_appimage.sh  create_dmg.sh  desktop-gallery.desktop  resources.qrc
.github/workflows/: quality_security.yml  repo-call_Readme.yml  sync-to-gitlab.yml
data/: quota_status.json  re-geocode.ini_example
docs/: GeoCoding.md  README.md  about.html  architecture.html  depdiscover_linux_v1.1.0.html  depdiscover_linux_v1.1.0.json  features.md  imprint.html  index.html  installation.html  sbom_linux_v1.1.0.json  sbom_v1.0.0.json  usage_screenshots.html
docs/architecture/: activity_diagram.md  bounded_contexts.md  class_diagram.md  component_diagram.md  deployment_diagram.md  deployment_view.md  development_view.md  entity_relationship_diagram.md  flowchart.md  functional_decomposition.md  information_flow.md  logical_decomposition.md  physical_decomposition.md  sequence_diagram.md  state_diagram.md  use_case_diagram.md
docs/assets/css/: attribute.css  coding.css  format.css  image.css  index.css  link.css  page-structure.css  text.css
docs/assets/i18n/: de.json  en.json
docs/assets/js/: all.js
i18n/: gallery_de.ts  gallery_en.ts
include/: DatabaseManager.hpp  DefaultMetaWidget.hpp  ImageIndexer.hpp  LoginDialog.hpp  MainWindow copy.hpp  MainWindow.hpp  MapWindow.hpp  ThumbnailDelegate.hpp  UploadManager.hpp  picture_widget.h  qt_gh-update-checker.hpp  rz_config.hpp  rz_metadata.hpp  rz_photo.hpp
include/regeocode/: adapter_bing.hpp  adapter_geonames_timezone.hpp  adapter_google.hpp  adapter_nominatim.hpp  adapter_opencage.hpp  api_adapter.hpp  http_client.hpp  quota_manager.hpp  re_geocode_core.hpp
resources/: create_icns.sh  desktop-gallery.icns
src/: DatabaseManager.cpp  DefaultMetaWidget.cpp  DefaultMetaWidget.ui  ImageIndexer.cpp  MainWindow copy.cpp  MainWindow.cpp  MainWindow.ui  MapWindow.cpp  ThumbnailDelegate.cpp  UploadManager.cpp  main.cpp  picture_widget.cpp  picture_widget.ui  rz_hwinfo.cpp  rz_photo.cpp
src/regeocode/: adapter_bing.cpp  adapter_geonames_timezone.cpp  adapter_google.cpp  adapter_nominatim.cpp  adapter_opencage.cpp  http_client.cpp  quota_manager.cpp  re_geocode_core.cpp
